autotests/syntax-tests/tests/positive/positive7.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name Name ; ( [ Name ] Name ) Name = ; [ Name e.Var ( # Name Name ) Name ] Name = { e.Var e.Var 123 Name = : = ; = ; } Name : = ; = ; } ; 