autotests/syntax-tests/tests/negative/negative114.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = $SWAP Name Name : = ; = ; } ; 